imp: JDK 16 兼容